# cs2d

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  gameConstants.h  settings.yaml  weaponConstants.h
client/: BuyOrder.h  CMakeLists.txt  CoordinateInformation.h  DataReceiver.cpp  DataReceiver.h  DropInformation.h  EntityConstants.h  Explotion.cpp  Explotion.h  ExplotionSprite.cpp  ExplotionSprite.h  GameClient.cpp  GameClient.h  GameRenderer.cpp  GameRenderer.h  GamesList.h  InputHandler.cpp  InputHandler.h  LobbyDTO.h  MainWindow.cpp  MainWindow.h  MoveConstants.h  PlayerInformation.h  PlayerSprite.h  PlayerSpriteprite.cpp  PositionDTO.h  ProjectileInformation.h  Protocol.cpp  Protocol.h  Protocol_testing.cpp  Protocol_testing.h  RgbValue.h  SettingsParser.cpp  SettingsParser.h  SoundManager.cpp  SoundManager.h  SpriteConstants.h  TextureManager.cpp  TextureManager.h  WeaponChanger.h  (+3 more)
client/Constants/: ClientConstants.h  MoveConstants.h
client/Login/: GameDTO.h  MessageBox.cpp  MessageBox.h  ServerMenu.cpp  ServerMenu.h  resources.qrc
client/Login/Assets/: SkinRepository.cpp  SkinRepository.h
client/Login/Audio/: MusicManager.cpp  MusicManager.h
client/Login/Buttons/: CreateGameButton.cpp  CreateGameButton.h  ExitGameButton.cpp  ExitGameButton.h  GameMenuButton.cpp  GameMenuButton.h  JoinGameButton.cpp  JoinGameButton.h  ListGamesButton.cpp  ListGamesButton.h
client/Login/Dialogs/: ConfirmExitDialog.h  CreateGameDialog.cpp  CreateGameDialog.h  DialogUtils.h  GameListDialog.cpp  GameListDialog.h  GameNameDialog.cpp  GameNameDialog.h  MapSelectionDialog.cpp  MapSelectionDialog.h  SkinSelectionDialog.cpp  SkinSelectionDialog.h  TeamSelectionDialog.cpp  TeamSelectionDialog.h  WaitingRoomDialog.cpp  WaitingRoomDialog.h
client/Login/Flows/: CreateGameFlow.cpp  CreateGameFlow.h  GameFlowBase.cpp  GameFlowBase.h  GameFlowUtils.cpp  GameFlowUtils.h  JoinGameFlow.cpp  JoinGameFlow.h  ListGameFlow.cpp  ListGameFlow.h
client/Login/Mappers/: MapMapper.cpp  MapMapper.h  SkinTraslator.cpp  SkinTraslator.h  TeamMapper.cpp  TeamMapper.h
client/Login/Visual/: MenuBackground.cpp  MenuBackground.h
client/Login/Widgets/: UsernameInput.cpp  UsernameInput.h
client/Protocol/: Protocol.cpp  Protocol.h
client/login/: CreateGameDialog.cpp  CreateGameDialog.h  GameCreatorMock.cpp  GameDTO.h  GameListerMock.cpp  GameListerMock.h  MapTraslator.h  ServerMenu.cpp  ServerMenu.h  SkinSelectionDialog.cpp  SkinSelectionDialog.h  SkinTraslator.cpp  SkinTraslator.h  TeamSelectionDialog.cpp  TeamSelectionDialog.h  WaitingRoomDialog.cpp  WaitingRoomDialog.h  resources.qrc
client/login/buttons/: CreateGameButton.cpp  CreateGameButton.h  ExitGameButton.cpp  JoinGameButton.cpp  JoinGameButton.h  ListGamesButton.cpp  ListGamesButton.h
client/login/dialogs/: ConfirmExitDialog.cpp  ConfirmExitDialog.h  CreateGameDialog.cpp  CreateGameDialog.h  GameListDialog.cpp  GameListDialog.h  GameNameDialog.cpp  GameNameDialog.h  MapSelectionDialog.cpp  MapSelectionDialog.h  SkinSelectionDialog.cpp  SkinSelectionDialog.h  TeamSelectionDialog.cpp  TeamSelectionDialog.h  WaitingRoomDialog.cpp  WaitingRoomDialog.h
client/login/mocks/: CreateGameDTO.h  GameCreatorMock.cpp  GameDTO.h  (+7 more)
common/: CMakeLists.txt  fixedOverWritingQueue.h  liberror.cpp  liberror.h  resolver.cpp  socket.cpp  socket.h  thread.h
common/Constants/: PlayerDataConstants.h  Skin.h  SnapshotConstants.h  TeamConstants.h  WeaponInformation.h
common/DTO/: DropDTO.cpp  GameLobbyDTO.h  GamesListDTO.h  LobbyConnectionDTO.h  PlayerChoicesDTO.h  PlayerInfoDTO.h  PlayerInformation.h  ProjectileDTO.h  WeaponInfoDTO.h
common/Exception/: ConnectionClosed.h
common/Readers/: Reader.cpp  Reader.h
common/Sender/: Sender.cpp  Sender.h
gameConstants/: GameInfo.yaml  WeaponsConfig.yaml  shop.yaml
libs/SDL2_gfx/: CMakeLists.txt
libs/fkYAML/: fkYAML.pc
maps/: aztec.yaml  dust.yaml  inferno.yaml  test_map.yaml  training_zone..yaml  training_zone.yaml
server/: AKFactory.cpp  AKFactory.h  ActivatedBacker.cpp  ActivatedBacker.h  ActivedDrop.cpp  ActivedDrop.h  Addable.h  Advancer.h  Ak.cpp  Ak.h  Awp.cpp  Awp.h  AwpFactory.cpp  AwpFactory.h  Backer.h  Bomb.cpp  Bomb.h  Buyer.cpp  Buyer.h  CMakeLists.txt  Clases.txt  Collisionable.h  ConnectionClosed.cpp  Coordinate.cpp  Coordinate.h  CoordinateDTO.h  CounterPlayer.cpp  CounterPlayer.h  CountersTeam.cpp  CountersTeam.h  Damageable.h  Damager.h  DeactivatedBacker.cpp  DeactivatedBacker.h  DeactivatedDrop.cpp  DeactivatedDrop.h  Deactivator.h  DirectProjectile.cpp  DirectProjectile.h  DistanceWeapon.cpp  (+112 more)
server/Constants/: ConnectionStatus.h  GameDataConstant.h  KeyContants.h  MapTypeConstants.h  Movement.h  MovementConstants.h  OpCodesConstans.h  PlayerDataConstants.h  ProtocolContants.h  ProtocolDefaults.h  SnapshotConstants.h  TeamConstants.h  WeaponConstants.h
server/DTO/: DisconnectionDTO.h  GameLobbyDTO.h  GamesListDTO.h  LobbyConnectionDTO.h  PlayerChoicesDTO.h
server/GameLogic/: Game.cpp  Game.h  GameInfoDTO.cpp  GameInfoDTO.h  GameMap.h
server/Handlers/: ClientHandler.cpp  ClientHandler.h  ClientStatus.h  GameLobbyHandler.cpp  GameLobbyHandler.h  InGameHandler.cpp  InGameHandler.h  LobbyHandler.cpp  LobbyHandler.h
server/Interfaces/: Disconnectable.h  DisconnectableProtocol.h  GameLobbyProtocolInterface.h  InGameProtocolInterface.h  ServerLobbyProtocolInterface.h
server/Lobby/: GameLobby.cpp  GameLobby.h  GameLobbyStatus.h  Lobby.cpp  Lobby.h
server/Monitor/: GameMonitor.cpp  GameMonitor.h
server/Orders/: GameLobbyOrder.cpp  GameLobbyOrder.h  InGameOrder.cpp  InGameOrder.h  Order.h  OrderType.h  ServerLobbyOrder.cpp  ServerLobbyOrder.h
server/Protocol/: GameLobbyProtocol.cpp  GameLobbyProtocol.h  InGameProtocol.cpp  InGameProtocol.h  Protocol.cpp  Protocol.h  ServerLobbyProtocol.cpp  ServerLobbyProtocol.h  documentacionProtocol.txt
server/Readers/: Reader.cpp  Reader.h
server/Requests/: Request.cpp  Request.h
server/Sender/: GameSender.cpp  GameSender.h  Sender.cpp  Sender.h
tests/: CMakeLists.txt  Parser.cpp  ProtocolTests.cpp  UseCases.cpp  foo.cpp
(+198 files in other folders)
